--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -42,6 +41,9 @@ dev_dependencies:
     sdk: flutter
   image_picker: ^0.8.5+3
   permission_handler: ^10.0.0
+  http: ^0.13.3
+  socket_io_client: ^2.0.0-beta.4-nullsafety.0
+  provider: ^6.0.1
 
   flutter_launcher_icons: ^0.9.2
 
