--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,8 @@ dev_dependencies:
   permission_handler: ^10.0.0
   http: ^0.13.3
   socket_io_client: ^2.0.0-beta.4-nullsafety.0
-  provider: ^6.0.1
+  intl: ^0.17.0
+  flutter_local_notifications: ^17.2.1
 
   flutter_launcher_icons: ^0.9.2
 
