--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,8 +45,10 @@ dev_dependencies:
   socket_io_client: ^2.0.0-beta.4-nullsafety.0
   intl: ^0.17.0
   flutter_local_notifications: ^17.2.1
-
+  shared_preferences: ^2.2.3
   flutter_launcher_icons: ^0.9.2
+  file_picker: ^8.0.5
+  webview_flutter: ^4.8.0
 
 flutter_icons:
   android: true
